New obnova 16.6.2 pre release

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
             <h2>Укрепление здоровья</h2>
             <h1>Акватерапия<br>Ritmstyle</h1>
         </div>
+        <h2>Сеаны Ritmstyle</h2>
+        <div class="secondscreen">
+            <p class="textscreen">Стандартный Ritmstyle</p>
+        </div>
     </main>
 </body>
 
