last update windows 98

--- a/index.html
+++ b/index.html
@@ -40,6 +40,18 @@
         <div class="secondscreen">
             <p class="textscreen">Стандартный Ritmstyle</p>
         </div>
+        <div class="thirdthscreen"> 
+            <p class="textscreen2">Ritmstyle для пар</p>
+        </div>
+        <div class="fourthscreen"> 
+            <p class="textscreen3">Ritmstyle для беременных</p>
+        </div>
+        <div class="fivethscreen"> 
+            <p class="textscreen4">Ritmstyle c полным погружением под воду</p>
+        </div>
+        <div class="sixthscreen"> 
+            <p class="textscreen5">Ritmstyle + красочная подводная фотосессия</p>
+        </div>
     </main>
 </body>
 
